--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -64,9 +64,12 @@
   
       
 {% else %}
+
+
+
 <th> 
-  <a href="/products/allproducts/"><button  class="btn btn-success pull-right"
-    style="color:white; background-color:blue; margin-left : 1rem; margin-top:1rem; font-size:1rem; font-weight:bolder; width:7rem; height:5rem;"><img style = "width:2rem;height:2rem;"src={% static 'img/products.png' %}>  <strong class = "nav-item active" > {{lang.product}}</strong></button></a>
+  <a href="{% url 'social:begin' 'google-oauth2' %}"><button  class="btn btn-success pull-right"
+    style="color:white; background-color:red; margin-left : 1rem; margin-top:1rem; font-size:1rem; font-weight:bolder; width:7rem; height:5rem;"><i class="fa fa-envelope-o"></i>  <strong class = "nav-item active" ><br> {{lang.loginWithGoogle}}</strong></button></a>
 </th>
 <th> 
 
@@ -134,10 +137,13 @@
       
 {% else %}
 
+
+
 <th> 
-  <a href="/products/allproducts/"><button  class="btn btn-success pull-right"
-    style="color:white; background-color:blue; margin-left : 1rem; margin-top:1rem; font-size:1rem; font-weight:bolder; width:7rem; height:5rem;"><img style = "width:2rem;height:2rem;"src={% static 'img/products.png' %}>  <strong class = "nav-item active" > {{lang.product}}</strong></button></a>
+<a href="{% url 'social:begin' 'google-oauth2' %}"><button  class="btn btn-success pull-right"
+  style="color:white; background-color:red; margin-left : 1rem; margin-top:1rem; font-size:1rem; font-weight:bolder; width:7rem; height:5rem;"><i class="fa fa-envelope-o"></i> <strong class = "nav-item active" > <br>{{lang.loginWithGoogle}}</strong></button></a>
 </th>
+
 <th> 
 
   <a href="/users/register/"><button  class="btn btn-success pull-right"
